--- a/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQPatrolItemWeatherViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQPatrolItemWeatherViewController.xib
@@ -133,13 +133,13 @@
                                             <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Fy-S3-2VB">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Fy-S3-2VB">
                                             <rect key="frame" x="113" y="143" width="120" height="120"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="120" id="TrH-jG-2Qx"/>
                                                 <constraint firstAttribute="height" constant="120" id="WwW-UA-Oxb"/>
                                             </constraints>
-                                            <state key="normal" backgroundImage="插入图片"/>
+                                            <state key="normal" image="插入图片"/>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="是否达标" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gf-zH-iYZ">
                                             <rect key="frame" x="15" y="287" width="70" height="21"/>
@@ -190,7 +190,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yu6-pU-uOb" customClass="SJAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yu6-pU-uOb" customClass="YQAddView" customModule="OpticalValleyUnite" customModuleProvider="target">
                                             <rect key="frame" x="55" y="318" width="310" height="80"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
