二维码开门生成接口,二维码实现调整

--- a/OpticalValleyUnite/Classes/UI/PatrolResult/View/YQWeatherResult.xib
+++ b/OpticalValleyUnite/Classes/UI/PatrolResult/View/YQWeatherResult.xib
@@ -11,12 +11,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" misplaced="YES" id="N66-wY-GgQ" customClass="YQWeatherResult" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="505"/>
+        <view contentMode="scaleToFill" id="N66-wY-GgQ" customClass="YQWeatherResult" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u58-uR-hbk">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="505"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qn1-2Q-hjN">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="500"/>
@@ -65,7 +65,6 @@
                                         </textView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KqH-kY-aID" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
                                             <rect key="frame" x="30" y="225" width="340" height="60"/>
-                                            <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="60" id="1Up-fm-Shf"/>
                                             </constraints>
