--- a/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/View/YQScanCell.xib
+++ b/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/View/YQScanCell.xib
@@ -18,17 +18,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="391" height="87.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hyb-5n-dOL">
-                        <rect key="frame" x="10" y="5" width="261" height="77.5"/>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hyb-5n-dOL">
+                        <rect key="frame" x="10" y="5" width="251" height="77.5"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nLf-vf-Vgt">
-                        <rect key="frame" x="321" y="29" width="40" height="30"/>
+                        <rect key="frame" x="311" y="24" width="50" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="0ZS-hH-UYh"/>
-                            <constraint firstAttribute="width" constant="40" id="UDV-6d-gqL"/>
+                            <constraint firstAttribute="height" constant="40" id="0ZS-hH-UYh"/>
+                            <constraint firstAttribute="width" constant="50" id="UDV-6d-gqL"/>
                         </constraints>
                         <state key="normal" image="扫描2"/>
                         <connections>
@@ -36,14 +36,14 @@
                         </connections>
                     </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="向下拷贝5" translatesAutoresizingMaskIntoConstraints="NO" id="bb4-qb-R7n">
-                        <rect key="frame" x="361" y="29" width="20" height="30"/>
+                        <rect key="frame" x="361" y="29" width="10" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="EkV-78-dCl"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="bb4-qb-R7n" secondAttribute="trailing" constant="10" id="3Sb-BI-xtc"/>
+                    <constraint firstAttribute="trailing" secondItem="bb4-qb-R7n" secondAttribute="trailing" constant="20" id="3Sb-BI-xtc"/>
                     <constraint firstAttribute="trailing" secondItem="nLf-vf-Vgt" secondAttribute="trailing" constant="30" id="R2W-5x-xgT"/>
                     <constraint firstItem="hyb-5n-dOL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="X7C-Do-wvo"/>
                     <constraint firstItem="nLf-vf-Vgt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ejc-30-pll"/>
@@ -59,7 +59,7 @@
                 <outlet property="BGScanButton" destination="nLf-vf-Vgt" id="oRG-9n-Gij"/>
                 <outlet property="textView" destination="hyb-5n-dOL" id="i66-is-HaT"/>
             </connections>
-            <point key="canvasLocation" x="-205.5" y="-88"/>
+            <point key="canvasLocation" x="-115" y="-93"/>
         </tableViewCell>
     </objects>
     <resources>
