--- a/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
+++ b/OpticalValleyUnite/Classes/UI/Home/ViewController/ReportMaster.storyboard
@@ -950,13 +950,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Tg-V9-Rch">
-                                <rect key="frame" x="0.0" y="64" width="375" height="212"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="244"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UaS-RI-4qV" customClass="RKTagsView">
-                                        <rect key="frame" x="20" y="64" width="355" height="128"/>
+                                        <rect key="frame" x="20" y="64" width="355" height="160"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" priority="1" constant="128" id="shH-qt-jfk"/>
+                                            <constraint firstAttribute="height" constant="160" id="AwV-uI-WAd"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRI-Vh-VtI">
@@ -995,13 +995,13 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VFy-fh-yaP">
-                                <rect key="frame" x="0.0" y="276" width="375" height="192"/>
+                                <rect key="frame" x="0.0" y="308" width="375" height="192"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hCS-69-cUp" customClass="RKTagsView">
                                         <rect key="frame" x="20" y="64" width="355" height="128"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" priority="1" constant="128" id="Dw3-x1-Ro0"/>
+                                            <constraint firstAttribute="height" constant="128" id="Yim-08-TwP"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cPg-hi-Phx">
