--- a/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQPatrolItemScoreViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQPatrolItemScoreViewController.xib
@@ -17,7 +17,7 @@
                 <outlet property="bottomView" destination="HPb-yk-XZT" id="U3u-l9-snt"/>
                 <outlet property="constraintHeight" destination="WKB-6m-Hu4" id="PmO-rz-2Aw"/>
                 <outlet property="descriptionLabel" destination="fgE-V4-DCq" id="W4g-rX-2F2"/>
-                <outlet property="imageButton" destination="MPy-RI-zAb" id="XOo-Yv-1Ca"/>
+                <outlet property="imageButton" destination="dXw-ew-RJb" id="3AQ-LC-qSh"/>
                 <outlet property="itemNumLabel" destination="6pJ-y9-DnA" id="s9S-rz-DyJ"/>
                 <outlet property="patrolItemLabel" destination="uUy-Zq-275" id="cPa-H1-6Eh"/>
                 <outlet property="patrolTypeLabel" destination="Q7l-1i-cdk" id="4zx-Kv-lH9"/>
@@ -140,14 +140,6 @@
                                     <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MPy-RI-zAb">
-                                    <rect key="frame" x="113" y="143" width="120" height="120"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="120" id="h1L-Ff-igB"/>
-                                        <constraint firstAttribute="height" constant="120" id="yAP-rv-Kss"/>
-                                    </constraints>
-                                    <state key="normal" image="插入图片"/>
-                                </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="评分" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0eu-1T-pba">
                                     <rect key="frame" x="15" y="287" width="40" height="46"/>
                                     <constraints>
@@ -261,12 +253,19 @@
                                         <constraint firstAttribute="height" constant="50" id="Kc5-29-XCf"/>
                                     </constraints>
                                 </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dXw-ew-RJb" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                    <rect key="frame" x="113" y="143" width="130" height="130"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="130" id="6HC-xb-0Wd"/>
+                                        <constraint firstAttribute="height" constant="130" id="6ss-R8-n5x"/>
+                                    </constraints>
+                                </view>
                             </subviews>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="y97-Bk-vKy" firstAttribute="top" secondItem="3EA-5w-IXH" secondAttribute="bottom" constant="10" id="3GP-Hp-C1Y"/>
                                 <constraint firstAttribute="trailing" secondItem="jKM-lg-kJi" secondAttribute="trailing" constant="10" id="C1T-hL-IWx"/>
-                                <constraint firstItem="MPy-RI-zAb" firstAttribute="leading" secondItem="Q7l-1i-cdk" secondAttribute="leading" id="DBR-8e-q9O"/>
                                 <constraint firstAttribute="trailing" secondItem="HPb-yk-XZT" secondAttribute="trailing" id="DaR-NB-jMq"/>
                                 <constraint firstItem="1j6-RL-fDk" firstAttribute="leading" secondItem="oZv-DS-bc6" secondAttribute="trailing" constant="5" id="F9T-Rx-PRJ"/>
                                 <constraint firstItem="hXf-GD-V8Q" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="Hhx-6N-cPI"/>
@@ -277,6 +276,7 @@
                                 <constraint firstItem="JPC-mS-ugn" firstAttribute="leading" secondItem="3EA-5w-IXH" secondAttribute="leading" id="PxF-UC-2sG"/>
                                 <constraint firstAttribute="trailing" secondItem="1j6-RL-fDk" secondAttribute="trailing" id="Qar-Zu-bvu"/>
                                 <constraint firstItem="gsh-e6-c5q" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="QiX-NS-dYF"/>
+                                <constraint firstItem="dXw-ew-RJb" firstAttribute="leading" secondItem="Q7l-1i-cdk" secondAttribute="leading" id="Qrv-JM-GGE"/>
                                 <constraint firstItem="PbB-Ek-4FJ" firstAttribute="top" secondItem="0eu-1T-pba" secondAttribute="bottom" constant="10" id="RBl-Um-goV"/>
                                 <constraint firstItem="hXf-GD-V8Q" firstAttribute="top" secondItem="jKM-lg-kJi" secondAttribute="bottom" constant="8" id="TQX-3U-wXt"/>
                                 <constraint firstItem="jKM-lg-kJi" firstAttribute="top" secondItem="5Aa-Ww-Z7F" secondAttribute="bottom" constant="5" id="UGY-KY-jqE"/>
@@ -293,7 +293,6 @@
                                 <constraint firstItem="fgE-V4-DCq" firstAttribute="leading" secondItem="Q7l-1i-cdk" secondAttribute="leading" id="cWu-pk-vKg"/>
                                 <constraint firstItem="HPb-yk-XZT" firstAttribute="top" secondItem="hXf-GD-V8Q" secondAttribute="bottom" constant="5" id="dsM-GJ-g6f"/>
                                 <constraint firstAttribute="trailing" secondItem="5Aa-Ww-Z7F" secondAttribute="trailing" constant="60" id="eFC-Gd-9pq"/>
-                                <constraint firstItem="MPy-RI-zAb" firstAttribute="top" secondItem="JPC-mS-ugn" secondAttribute="top" id="eYC-jm-M8q"/>
                                 <constraint firstItem="jKM-lg-kJi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="ejs-Dg-tKR"/>
                                 <constraint firstItem="0eu-1T-pba" firstAttribute="top" secondItem="JPC-mS-ugn" secondAttribute="bottom" constant="120" id="fQh-Iy-Y1U"/>
                                 <constraint firstItem="5Aa-Ww-Z7F" firstAttribute="top" secondItem="PbB-Ek-4FJ" secondAttribute="top" id="g4e-pZ-LDa"/>
@@ -302,6 +301,7 @@
                                 <constraint firstItem="3EA-5w-IXH" firstAttribute="top" secondItem="gsh-e6-c5q" secondAttribute="bottom" constant="15" id="lfv-sX-kbP"/>
                                 <constraint firstItem="y97-Bk-vKy" firstAttribute="leading" secondItem="3EA-5w-IXH" secondAttribute="leading" id="mx2-OR-45u"/>
                                 <constraint firstItem="y97-Bk-vKy" firstAttribute="width" secondItem="3EA-5w-IXH" secondAttribute="width" id="nIF-GM-4Z5"/>
+                                <constraint firstItem="dXw-ew-RJb" firstAttribute="top" secondItem="JPC-mS-ugn" secondAttribute="top" id="oof-ob-vvg"/>
                                 <constraint firstItem="JPC-mS-ugn" firstAttribute="width" secondItem="3EA-5w-IXH" secondAttribute="width" id="sLs-Mv-zM0"/>
                                 <constraint firstAttribute="trailing" secondItem="Q7l-1i-cdk" secondAttribute="trailing" constant="5" id="vGC-Ms-gI4"/>
                                 <constraint firstItem="HPb-yk-XZT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="wcp-2T-PPj"/>
@@ -332,7 +332,6 @@
     <resources>
         <image name="star拷贝7" width="22" height="22"/>
         <image name="star拷贝8" width="22" height="22"/>
-        <image name="插入图片" width="120" height="120"/>
         <image name="矢量智能对象" width="16" height="14"/>
     </resources>
 </document>
