--- a/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQPatrolItemWeatherViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/VideoPatrol/ViewController/YQPatrolItemWeatherViewController.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQPatrolItemWeatherViewController" customModule="OpticalValleyUnite" customModuleProvider="target">
             <connections>
-                <outlet property="addImageButton" destination="6Fy-S3-2VB" id="ptk-0G-7r4"/>
+                <outlet property="addImageButton" destination="tND-S1-l6a" id="CIR-E6-5Ry"/>
                 <outlet property="addImageView" destination="yu6-pU-uOb" id="jZx-LE-CSg"/>
                 <outlet property="bottomView" destination="vNT-su-G4z" id="DZm-Kq-yDb"/>
                 <outlet property="constraintViewHeight" destination="Ptg-QG-TS7" id="CGE-bp-Eu9"/>
@@ -133,14 +133,6 @@
                                             <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Fy-S3-2VB">
-                                            <rect key="frame" x="113" y="143" width="120" height="120"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="120" id="TrH-jG-2Qx"/>
-                                                <constraint firstAttribute="height" constant="120" id="WwW-UA-Oxb"/>
-                                            </constraints>
-                                            <state key="normal" image="插入图片"/>
-                                        </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="是否达标" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gf-zH-iYZ">
                                             <rect key="frame" x="15" y="287" width="70" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -218,12 +210,19 @@
                                                 <constraint firstAttribute="height" constant="60" id="aoj-NO-DhY"/>
                                             </constraints>
                                         </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tND-S1-l6a" customClass="ShowImageView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                            <rect key="frame" x="113" y="143" width="130" height="130"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="130" id="L9v-u5-7d3"/>
+                                                <constraint firstAttribute="height" constant="130" id="l30-dV-kL1"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="6Xw-Kx-Xam" firstAttribute="centerY" secondItem="3Gf-zH-iYZ" secondAttribute="centerY" id="0KZ-mH-gaO"/>
                                         <constraint firstItem="jGj-Ug-SNN" firstAttribute="centerY" secondItem="BuZ-M5-ckh" secondAttribute="centerY" id="10P-qJ-DO4"/>
-                                        <constraint firstItem="6Fy-S3-2VB" firstAttribute="top" secondItem="WJ9-cR-3U0" secondAttribute="top" id="4WZ-lF-gXX"/>
                                         <constraint firstItem="Gen-bY-GGG" firstAttribute="top" secondItem="IWs-2e-E8O" secondAttribute="top" id="5u3-DS-6DK"/>
                                         <constraint firstItem="BuZ-M5-ckh" firstAttribute="leading" secondItem="IWs-2e-E8O" secondAttribute="leading" constant="15" id="9FE-qJ-8TD"/>
                                         <constraint firstItem="7xT-uY-ZHU" firstAttribute="leading" secondItem="jGj-Ug-SNN" secondAttribute="leading" id="D3k-3r-cUd"/>
@@ -233,6 +232,7 @@
                                         <constraint firstItem="Gen-bY-GGG" firstAttribute="leading" secondItem="IWs-2e-E8O" secondAttribute="leading" id="HVl-Sm-RSO"/>
                                         <constraint firstAttribute="trailing" secondItem="yu6-pU-uOb" secondAttribute="trailing" constant="10" id="JbF-KP-rZw"/>
                                         <constraint firstItem="WJ9-cR-3U0" firstAttribute="width" secondItem="BuZ-M5-ckh" secondAttribute="width" id="K5x-lf-4fJ"/>
+                                        <constraint firstItem="tND-S1-l6a" firstAttribute="top" secondItem="WJ9-cR-3U0" secondAttribute="top" id="MOr-Ym-rgx"/>
                                         <constraint firstItem="yu6-pU-uOb" firstAttribute="top" secondItem="t7I-XL-Ax2" secondAttribute="top" id="MYx-mn-Ua8"/>
                                         <constraint firstItem="vNT-su-G4z" firstAttribute="top" secondItem="7B5-R8-qJr" secondAttribute="bottom" constant="5" id="OI4-Fj-EnZ"/>
                                         <constraint firstItem="iVZ-pu-diE" firstAttribute="leading" secondItem="BuZ-M5-ckh" secondAttribute="leading" id="Pj7-bI-hzH"/>
@@ -240,8 +240,8 @@
                                         <constraint firstItem="7B5-R8-qJr" firstAttribute="top" secondItem="MEN-X9-KpF" secondAttribute="bottom" constant="8" id="Rzi-yJ-EaW"/>
                                         <constraint firstItem="7B5-R8-qJr" firstAttribute="leading" secondItem="IWs-2e-E8O" secondAttribute="leading" constant="15" id="SD0-kp-EG8"/>
                                         <constraint firstItem="iVZ-pu-diE" firstAttribute="width" secondItem="BuZ-M5-ckh" secondAttribute="width" id="TKU-CL-KTj"/>
-                                        <constraint firstItem="6Fy-S3-2VB" firstAttribute="leading" secondItem="jGj-Ug-SNN" secondAttribute="leading" id="UwM-uR-65Y"/>
                                         <constraint firstItem="yu6-pU-uOb" firstAttribute="leading" secondItem="t7I-XL-Ax2" secondAttribute="trailing" constant="5" id="VDk-BV-Hdu"/>
+                                        <constraint firstItem="tND-S1-l6a" firstAttribute="leading" secondItem="jGj-Ug-SNN" secondAttribute="leading" id="Vod-wH-1KG"/>
                                         <constraint firstItem="WJ9-cR-3U0" firstAttribute="leading" secondItem="BuZ-M5-ckh" secondAttribute="leading" id="WgR-XM-4JZ"/>
                                         <constraint firstItem="6Xw-Kx-Xam" firstAttribute="leading" secondItem="MQb-B0-WK8" secondAttribute="trailing" constant="10" id="Wwt-a2-JMe"/>
                                         <constraint firstItem="vNT-su-G4z" firstAttribute="leading" secondItem="IWs-2e-E8O" secondAttribute="leading" id="X3P-Sb-tNA"/>
@@ -293,13 +293,12 @@
                 <constraint firstAttribute="bottom" secondItem="zU0-CD-keG" secondAttribute="bottom" id="UP0-Oo-8nn"/>
                 <constraint firstItem="zU0-CD-keG" firstAttribute="top" secondItem="u8r-du-viz" secondAttribute="top" id="nYI-K9-JuA"/>
             </constraints>
-            <point key="canvasLocation" x="-573" y="916"/>
+            <point key="canvasLocation" x="-573.5" y="915.5"/>
         </view>
     </objects>
     <resources>
         <image name="weatherD" width="22" height="22"/>
         <image name="weatherS" width="22" height="22"/>
-        <image name="插入图片" width="120" height="120"/>
         <image name="矢量智能对象" width="16" height="14"/>
     </resources>
 </document>
