--- a/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/ViewController/YQScanImageViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/IntoDoorAdminis/ViewController/YQScanImageViewController.xib
@@ -16,31 +16,52 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" alpha="0.69999999999999996" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OLP-kK-O2u">
+                    <rect key="frame" x="10" y="133.5" width="355" height="400"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="400" id="zKf-0m-heo"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="10"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Z0Q-aW-ZwN">
-                    <rect key="frame" x="0.0" y="153.5" width="375" height="300"/>
+                    <rect key="frame" x="20" y="163.5" width="335" height="300"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="300" id="NHF-yD-KmL"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="10"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="该二维码20分钟内有效" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6R-0e-uIG">
-                    <rect key="frame" x="119.5" y="463.5" width="136" height="16"/>
+                    <rect key="frame" x="119.5" y="473.5" width="136" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="Z0Q-aW-ZwN" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-30" id="25a-VC-yKN"/>
-                <constraint firstItem="Z0Q-aW-ZwN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="59P-q1-viV"/>
-                <constraint firstAttribute="trailing" secondItem="Z0Q-aW-ZwN" secondAttribute="trailing" id="65L-C0-sKU"/>
+                <constraint firstItem="Z0Q-aW-ZwN" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-20" id="25a-VC-yKN"/>
+                <constraint firstItem="OLP-kK-O2u" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="2zH-tE-IXS"/>
+                <constraint firstItem="Z0Q-aW-ZwN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="59P-q1-viV"/>
+                <constraint firstAttribute="trailing" secondItem="Z0Q-aW-ZwN" secondAttribute="trailing" constant="20" id="65L-C0-sKU"/>
                 <constraint firstItem="Z0Q-aW-ZwN" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Mob-ew-saw"/>
                 <constraint firstItem="U6R-0e-uIG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NRu-em-qIv"/>
                 <constraint firstItem="U6R-0e-uIG" firstAttribute="top" secondItem="Z0Q-aW-ZwN" secondAttribute="bottom" constant="10" id="QG3-xM-X0a"/>
+                <constraint firstAttribute="trailing" secondItem="OLP-kK-O2u" secondAttribute="trailing" constant="10" id="cg3-ro-QgL"/>
+                <constraint firstItem="OLP-kK-O2u" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="tsl-Ra-Swy"/>
+                <constraint firstItem="OLP-kK-O2u" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="zkd-9R-9U6"/>
             </constraints>
         </view>
     </objects>
